--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -11,6 +11,7 @@
 @import "components/forms";
 @import "components/grid";
 @import "components/pre-footer";
+@import "components/press-banner";
 @import "components/wp-classes";
 @import "layouts/header";
 @import "layouts/sidebar";
