added cme letter and completed the homepage. created theme options page for global footer and pre footer styling

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -10,6 +10,7 @@
 @import "components/comments";
 @import "components/forms";
 @import "components/grid";
+@import "components/cme-letter";
 @import "components/pre-footer";
 @import "components/press-banner";
 @import "components/wp-classes";
