completed trading experience page

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -13,6 +13,7 @@
 @import "components/cme-letter";
 @import "components/pre-footer";
 @import "components/press-banner";
+@import "components/testimonials";
 @import "components/wp-classes";
 @import "layouts/header";
 @import "layouts/sidebar";
