--- a/assets/styles/layouts/_pages.scss
+++ b/assets/styles/layouts/_pages.scss
@@ -1,25 +1,30 @@
 // Trading Experience
-.two-col-text {
-  margin: 50px 0 50px;
+.page-template-template-trading {
+  
+  .two-col-text {
+    margin: 50px 0 50px;
 
-  p {
-    margin-bottom: 35px;
-    line-height: 28px;
-  }
+    p {
+      margin-bottom: 35px;
+      line-height: 28px;
+    }
 
-  img {
-    display: block;
-    margin: 25px auto 0;
-  }
+    img { 
+      display: block;
+      margin: 25px auto 0;
+    }
 
-  .padding-top {
-    padding-top: 50px;
+    .padding-top {
+      padding-top: 50px;
+    }
   }
 }
 
 @media screen and (min-width: 768px) {
-  .two-col-text {
-    margin: 75px 0 75px;
+  .page-template-template-trading {
+    .two-col-text {
+      margin: 75px 0 75px;
+    }
   }
 }
 
